--- a/css/style.css
+++ b/css/style.css
@@ -206,61 +206,127 @@ aside p{
  }
 
 
+
+
+ /* Menu
+ ---------------------------------- */
+ #menu{
+   background-image: url(../images/menu-bg.jpg);
+   min-height: 100vh;
+ }
+ .menu-content{
+   max-width: 560px;
+   margin-top: 10%;
+
+ }
+ menu-content .page-title{
+   text-align: center;
+ }
+ menu-content p{
+   font-size: 1.125rem;
+   margin: 10px 0 0;
+ }
+
+ .grid{
+   display: grid;
+   gap:26px;
+   grid-template-columns: repeat(auto-fit,minmax(240px,1fr));
+   margin-top: 6%;
+   margin-bottom: 50px;
+ }
+
+ .big-box{
+   grid-column: 1 / 3;
+   grid-row: 1 / 3;
+ }
+
+ .big-box img{
+   height:94%;
+   width: 100%;
+ object-fit:cover;
+ }
+
+
 /*モバイル版
 --------------------------------*/
 
- @media (max-width: 600px){
+@media (max-width: 600px) {
+    .page-title {
+        font-size: 2.5rem;
+    }
+    .page-header {
+        flex-direction: column;
+        align-items: center;
+    }
 
-.page-title{
-  font-size: 2.5rem;
-  }
-/*HEADER*/
-.main-nav{font-size: 1rem;
-margin-top: 10px;
-}
-.main-nav li{margin: 0 20px;
-}
-/*HOME*/
-.home-content{
-  margin-top: 20%;
-}
-.page-header{
-  flex-direction: column;
-  align-items: center;
-}
-/*NEWS*/
-.news-contents{
-  flex-direction: column;
-}
-article,
-aside{width: 100%;}
+    /* HEADER */
+    .main-nav {
+        font-size: 1rem;
+        margin-top: 10px;
+    }
+    .main-nav li {
+        margin: 0 20px;
+    }
 
-#news .page-title{
-  margin-top: 30px;
-}
+    /* HOME */
+    .home-content {
+        margin-top: 20%;
+    }
 
-aside{margin-top: 60px;}
+    /* NEWS */
+    .news-contents {
+        flex-direction: column;
+    }
+    #news .page-title {
+        margin-top: 30px;
+    }
+    article,
+    aside {
+        width: 100%;
+    }
+    aside {
+        margin-top: 60px;
+    }
+    .post-info {
+        margin-bottom: 30px;
+    }
+    .post-date {
+        width: 70px;
+        height: 70px;
+        font-size: 1rem;
+    }
+    .post-date span {
+        font-size: 0.875rem;
+        padding-top: 2px;
+    }
+    .post-title {
+        font-size: 1.375rem;
+    }
+    .post-cat {
+        font-size: 0.875rem;
+        margin-top: 10px;
+    }
+    .post-title,
+    .post-cat {
+        margin-left: 80px;
+    }
 
-.post-info{margin-bottom: 30px;}
+  /* MENU */
+  .menu-content {
+        margin-top: 20%;
+    }
 
-.post-date{width: 70px;
-height: 70px;
-font-size: 1rem;
-}
-.post-date span{
-  font-size: 0.875rem;
-  padding-top: 2px;
+    .big-box {
+        grid-column: auto;
+        grid-row: auto;
+    }
+    .big-box img {
+        height: 100%;}
 
-}
-.post-title{
-  font-size: 1.375rem;
 
-}
-.posy-cat{font-size: 0.875rem;
-margin-top: 10px;
-}
-.post-title,
-.post-cat{margin-left: 80px;
-}
+
+
+
+
 
 }
